--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 
 
   <!-- CSS files -->
-  <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <!-- Plugins -->
-  <link rel="stylesheet" type="text/css" href="/assets/plugins/slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="/assets/plugins/slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="assets/plugins/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="assets/plugins/slick/slick-theme.css" />
 
 
   <!-- RTE -->
 
-  <link rel="stylesheet" href="/richtexteditor/rte_theme_default.css" />
-  <script type="text/javascript" src="/richtexteditor/rte.js"></script>
-  <script type="text/javascript" src='/richtexteditor/plugins/all_plugins.js'></script>
+  <link rel="stylesheet" href="richtexteditor/rte_theme_default.css" />
+  <script type="text/javascript" src="richtexteditor/rte.js"></script>
+  <script type="text/javascript" src='richtexteditor/plugins/all_plugins.js'></script>
 
 
-  <link href="/assets/css/style.css" rel="stylesheet">
-  <link href="/assets/css/dark-theme.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/dark-theme.css" rel="stylesheet">
 
   <title>ShopMySite - eCommerce</title>
 </head>
@@ -34,12 +34,12 @@
   <div id="root"></div>
   <script type="module" src="src/main.jsx"></script>
   <!-- JavaScript files -->
-  <script src="/assets/js/bootstrap.bundle.min.js"></script>
-  <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/plugins/slick/slick.min.js"></script>
-  <script src="/assets/js/main.js"></script>
-  <script src="/assets/js/index.js"></script>
-  <script src="/assets/js/loader.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/plugins/slick/slick.min.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/index.js"></script>
+  <script src="assets/js/loader.js"></script>
 
 </body>
 
